# screen-reminder

./: .gitignore  README.md  build.py  pyproject.toml
doc/: PRD.md
src/: __main__.py  main.py
src/app/: application.py  single_instance.py
src/data/: data_access.py  database.py  models.py
src/engine/: idle_detector.py  notification.py  scheduler.py
src/modules/: eye_care.py  hydration.py  spine_care.py
src/tray/: tray_icon.py
src/ui/: overlay.py  settings.py
src/utils/: assets.py  config.py  constants.py
